# Minimal-CMake-App-For-Microsoft-Store

./: .gitignore  AppxManifest.xml.in  CMakeLists.txt  MakeSelfSignedCertificate.ps1  README.md  cli_build.bat  main.cpp
